--- a/cr-style.css
+++ b/cr-style.css
@@ -36,7 +36,7 @@ body{
     filter: invert(1);
 }
 .invert {
-    background:#ddd;
+    background:#eee;
 }
 .invert > * {
     filter: invert(1);
@@ -327,4 +327,21 @@ input[type=range] {
     .square-container-container {
         max-width: 80vw;
     }
+}
+
+/* CR-DRAW.JS */
+.canvas-container {
+    display: inline-block;
+    margin: 0;
+    position: relative;
+}
+.canvas-title {
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+}
+.canvas-clave {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
 }
