--- a/settings-modal.css
+++ b/settings-modal.css
@@ -154,6 +154,7 @@
     border-radius: 4px;
     outline: none;
     -webkit-appearance: none;
+    appearance: none;
 }
 
 .settings-control input[type="range"]::-webkit-slider-thumb {
